# CoNa_tasho

./: CMakeLists.txt  MiR250_MPC.py  README.md  cona_tasho_mpc.py  cona_tasho_mpc_jerk.py  cona_tasho_mpc_snap.py  package.xml  pyIMU_read.py
bag/: jerk.bag  snap.bag
bag/experiment/: jerk_wo_load.bag  snap_w_load.bag
bag/experiment2/: jerk_wo_load.bag
casadi_dir/: casadi2cpp  casadi2cpp.cpp  casadi2python.py  loadjson_example.cpp  output_executable  tc.json  tc_mpc.casadi  tc_ocp.casadi  tc_pred.casadi
data/bag/experiment/: jerk_w_load.bag  snap_wo_load.bag
data/bag/experiment2/: jerk_w_load.bag  snap_w_load.bag  snap_wo_load.bag
include/: mpc_node.h
lib/casadi/: tc.json  tc_mpc.casadi
modules/: FindCASADI.cmake
script/: casadi2python.py  cona_tasho_mpc.py  cona_tasho_mpc_jerk.py  cona_tasho_mpc_snap.py  waypoints_functions.py
src/: casadi2cpp  casadi2cpp.cpp  loadjson_example  loadjson_example.cpp  mpc_node.cpp
