<?xml version="1.0"?>
<package format="2">
  <name>cona_tasho</name>
  <version>0.0.1</version>
  <description>The cona_tasho package for running MPC with ROS and other utilities</description>

  <maintainer email="tjsghd101@hanyang.ac.kr"> Sunhong Kim</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>